changed the build to use java 17 third